--- a/src/components/bloodDrive2023.module.css
+++ b/src/components/bloodDrive2023.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   align-content: center;
   justify-content: space-around;
@@ -7,4 +7,62 @@
 .frame {
   width: 100vw;
   height: 100vh;
+} */
+
+.footerContainer {
+  background-color: rgb(239, 98, 98);
+  color: white;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 2rem;
+  height: auto;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.container {
+  background-color:  rgb(239, 98, 98);
+  margin: 0;
+  padding: 0;
+  padding-bottom: 2rem;
+  height: auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.image {
+  /* margin: 1rem 5rem; */
+  margin: 1rem 20%;
+  /* width: 50vw; */
+  /* border: white solid 5px; */
+  justify-content: center;
+  /* float: left; */
+}
+
+
+.title {
+  font-size: 3rem;
+  font-weight: 400;
+}
+
+.text {
+  margin-left: 10vw;
+  margin-right: 10vw;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+}
+
+.book {
+  font-style: italic;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  font-size: 1.8rem;
+  display: flex;
+  justify-content: center;
 }
