--- a/src/components/bellTowerTreasures.module.css
+++ b/src/components/bellTowerTreasures.module.css
@@ -16,7 +16,7 @@
     margin: 0;
     padding: 0;
     padding-bottom: 2rem;
-    height: auto;
+    /* height: auto; */
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -25,10 +25,8 @@
 }
 .image {
     margin: 1rem 1rem;
-    /* width: 50vw; */
-    /* border: white solid 5px; */
+    /* width: 90vw; */
     justify-content: center;
-    /* float: left; */
 }
 
 
