--- a/src/components/vbs2023.module.css
+++ b/src/components/vbs2023.module.css
@@ -1,9 +1,7 @@
-body {
-  padding:0;
-  margin: 0;
-}
 
-.footerContainer {
+  @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&display=swap');
+
+.container {
   background-color: rgb(8, 226, 241);
   color: rgb(2, 6, 248);
   margin: 0;
@@ -15,9 +13,11 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
+  padding:0;
+  margin: 0;
 }
 
-.container {
+.imageContainer {
   background-color:  rgb(8, 226, 241);
   margin: 0;
   padding: 0;
@@ -37,17 +37,30 @@ body {
 
 .title {
   font-size: 2rem;
-  font-weight: 400;
+  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  ;
 }
 
 .text {
   margin-left: 10vw;
   margin-right: 10vw;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   display: flex;
   justify-content: center;
-  line-height: 1.0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
 }
+
+.text h2 {
+  margin-left: 10vw;
+  margin-right: 10vw;
+  font-size: 0.75rem;
+  display: flex;
+  justify-content: center;
+  font-family: 'Merriweather', serif;
+}
+
 
 .smallText {
   margin-left: 10vw;
@@ -56,6 +69,7 @@ body {
   display: flex;
   justify-content: center;
   line-height: 0.2;
+  font-family: 'Merriweather', serif;
 }
 
 
@@ -64,6 +78,7 @@ body {
   background: #eee;
   padding: 1em;
   border-radius: 1em;
+  width: 80vw;
 }
 .quote figcaption,
 .quote blockquote {
