--- a/src/components/vbs2023.module.css
+++ b/src/components/vbs2023.module.css
@@ -98,3 +98,30 @@ hr {
   padding: 0;
   width: 40vw;
 }
+
+.button:link {
+  text-decoration: none;
+}
+
+.button:visited {
+  text-decoration: none;
+}
+
+.button:hover {
+  text-decoration: none;
+}
+
+.button:active {
+  text-decoration: none;
+}
+
+.button {
+  background-color: #5810df; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
