--- a/src/components/bloodDrive2023.module.css
+++ b/src/components/bloodDrive2023.module.css
@@ -1,4 +1,3 @@
-
 .footerContainer {
   background-color: rgb(239, 98, 98);
   color: white;
@@ -14,7 +13,7 @@
 }
 
 .container {
-  background-color:  rgb(239, 98, 98);
+  background-color: rgb(239, 98, 98);
   margin: 0;
   padding: 0;
   padding-bottom: 2rem;
@@ -25,13 +24,35 @@
   align-items: center;
   align-content: center;
 }
-.image {
 
+.image {
   margin: 2rem 0;
-  width: 75vw;
   justify-content: center;
 }
 
+@media only screen and (max-width: 9999px) {
+  .image {
+    width: 50vw;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .image {
+    width: 50vw;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .image {
+    width: 80vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .image {
+    width: 80vw;
+  }
+}
 
 .title {
   font-size: 3rem;
