--- a/src/components/iceCreamSocial2023.module.css
+++ b/src/components/iceCreamSocial2023.module.css
@@ -1,28 +1,19 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+
 
 .container {
-  background-color: rgb(8, 226, 241);
-  color: rgb(2, 6, 248);
+  background-color: black;
+  /* background-color:  rgb(8, 226, 241); */
   margin: 0;
-  padding: 0;
-  padding-bottom: 2rem;
-  height: auto;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  padding:0;
-  margin: 0;
+  padding: 2rem 0;
 }
 
 .imageContainer {
-  background-color:  rgb(8, 226, 241);
+  /* background-color:  rgb(8, 226, 241); */
   margin: 0;
-  padding: 2rem 0;
-  /* padding-bottom: 2rem; */
-  height: auto;
+  padding: 0;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -30,98 +21,35 @@
   align-content: center;
 }
 .image {
-  /* margin: 1rem 15%; */
   justify-content: center;
 }
 
-
-.title {
-  font-size: 1rem;
-  font-weight: 500;
-  font-family: 'Montserrat', sans-serif;
+.textContainer {
+  background-color: black;
+  margin: 0;
+  padding: 0;
+  /* width: 80vw; */
+  /* height: auto; */
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .text {
-  margin-left: 10vw;
-  margin-right: 10vw;
-  font-size: 0.9rem;
-  display: flex;
-  justify-content: center;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-}
-
-.text h2 {
-  margin-left: 10vw;
-  margin-right: 10vw;
-  font-size: 0.75rem;
-  display: flex;
-  justify-content: center;
-  font-family: 'Merriweather', serif;
-}
-
-
-.smallText {
-  margin-left: 10vw;
-  margin-right: 10vw;
-  font-size: 1.2rem;
-  display: flex;
-  justify-content: center;
-  line-height: 0.2;
-  font-family: 'Merriweather', serif;
-}
-
-
-.quote {
-  margin: 2rem 0;
-  background: #eee;
-  padding: 1em;
-  border-radius: 1em;
-  width: 80vw;
-}
-.quote figcaption,
-.quote blockquote {
-  margin: 1em;
-  color: rgb(95, 92, 92);
-}
-
-.quote figcaption {
-  font-weight: 700;
-}
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #f00c0c;
-  margin: 1em 0;
-  padding: 0;
-  width: 40vw;
-}
-
-.button:link {
-  text-decoration: none;
-}
-
-.button:visited {
-  text-decoration: none;
-}
-
-.button:hover {
-  text-decoration: none;
-}
-
-.button:active {
-  text-decoration: none;
-}
-
-.button {
-  background-color: #5810df; /* Green */
-  border: none;
+  margin: 0;
+  padding: 0.5rem 0;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: 200;
+  font-size: 1.8rem;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
+}
+
+.text a {
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  font-weight: 400;
+  color: white;
 }
