--- a/src/components/creation2023.module.css
+++ b/src/components/creation2023.module.css
@@ -45,7 +45,6 @@
   margin: 0;
   margin-bottom: 1.5rem;
   padding: 0;
-  /* line-height: 1.5; */
 }
 
 .heading2 {
@@ -55,8 +54,6 @@
   margin: 0;
   margin-bottom: 1.5rem;
   padding: 0;
-  /* line-height: 1.5; */
-
 }
 
 .text {
@@ -75,6 +72,7 @@
     /* font-size: 2vmin; */
     margin-left: 10vw;
     margin-right: 10vw;
+    font-size: 4vmin;
   }
 
   .text {
@@ -82,6 +80,7 @@
     margin-left: 15vw;
     margin-right: 15vw;
     font-weight: 500;
+    font-size: 3vmin;
   }
 }
 
