--- a/src/components/laundryLove.module.css
+++ b/src/components/laundryLove.module.css
@@ -15,6 +15,19 @@
   justify-content: center;
 }
 
+.headerContainer {
+  /* background-color: rgb(153, 229, 132); */
+  margin: 0;
+  padding: 0;
+  padding-bottom: 2rem;
+  height: auto;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
 .title {
   font-size: 4rem;
   font-weight: 400;
