--- a/src/components/bota2023.module.css
+++ b/src/components/bota2023.module.css
@@ -57,7 +57,7 @@
 }
 
 .text {
-  font-size: 1.75vmin;
+  font-size: 2rem;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-style: italic;
