--- a/src/components/bellTowerTreasures.module.css
+++ b/src/components/bellTowerTreasures.module.css
@@ -1,3 +1,40 @@
+.outerContainer {
+    background-color: rgb(153, 229, 132);
+    margin: 0;
+    padding: 0;
+    padding-bottom: 2rem;
+    height: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.leftContainer {
+    background-color: rgb(153, 229, 132);
+    margin: 0;
+    padding: 0;
+    padding-bottom: 2rem;
+    height: auto;
+    display: flex;
+    flex-flow: column ;
+    /* justify-content: left;
+    align-items: left;
+    align-content: left; */
+}
+.rightContainer {
+    background-color: rgb(153, 229, 132);
+    margin: 0;
+    padding: 0;
+    padding-bottom: 2rem;
+    height: auto;
+    display: flex;
+    flex-flow: column nowrap;
+    /* justify-content: right;
+    align-items: right;
+    align-content: right; */
+}
+
 .headerContainer {
     background-color: rgb(153, 229, 132);
     margin: 0;
@@ -36,7 +73,7 @@
   .text {
     margin-left: 10vw;
     margin-right: 10vw;
-    font-size: 1.5rem;
+    font-size: 1.0rem;
     display: flex;
     justify-content: center;
   }
