--- a/src/components/litanyHolyLand.module.css
+++ b/src/components/litanyHolyLand.module.css
@@ -33,7 +33,7 @@
   padding: 1rem;
   width: auto;
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
   align-items: center;
   flex: 1;
 }
@@ -95,22 +95,9 @@
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
 }
 
-@media screen and (max-width: 50px) {
-  .outerContainer {
+@media screen and (max-width: 790px) {
+  .textContainer {
     flex-flow: column nowrap;
-  }
-
-  .heading1, .heading2 {
-    margin-left: 10vw;
-    margin-right: 10vw;
-    font-size: 4.3vmin;
-  }
-
-  .text {
-    margin-left: 15vw;
-    margin-right: 15vw;
-    font-weight: 500;
-    font-size: 3.3vmin;
   }
 }
 
