--- a/src/components/laundryLove.module.css
+++ b/src/components/laundryLove.module.css
@@ -1,3 +1,8 @@
+.main {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   margin: 0;
   padding: 0;
@@ -11,13 +16,13 @@
 .imageContainer {
   background-color: rgb(180, 148, 172);
   margin: 0;
-    padding: 0;
-    padding-bottom: 2rem;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+  padding: 0;
+  padding-bottom: 2rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .headerContainer {
