--- a/src/components/rex.module.css
+++ b/src/components/rex.module.css
@@ -11,7 +11,7 @@
   .container {
     background-color: #7BAFD4;
     margin: 0;
-    padding: 10px;
+    /* padding: 10px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,14 +20,17 @@
 
 
 .item {
-  font-family: 'Montserrat', sans-serif;
-    width: 80vw;
+    font-family: 'Montserrat', sans-serif;
+    /* width: 80vw; */
     font-size: 1.25rem;
+    padding: 5px 15px;
+
 }
 
 .header {
-  font-family: 'Montserrat', sans-serif;
-    width: 80vw;
+    font-family: 'Montserrat', sans-serif;
+    /* width: 80vw; */
     font-size: 2rem;
     font-weight: 300;
+    /* padding: 5px 5px; */
 }
