add ash wednesday

--- a/src/components/pancakeSupper2024.module.css
+++ b/src/components/pancakeSupper2024.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: white;
+    background-color: rgb(236, 244, 186);
     margin: 0;
     padding: 0;
     padding-bottom: 2rem;
