--- a/src/components/taizeLent2024.module.css
+++ b/src/components/taizeLent2024.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Protest+Revolution&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .container {
     background-color: rgb(158, 211, 243);
     margin: 0;
@@ -17,14 +19,17 @@
 }
 
 .text {
-    font-family: "Aboreto", cursive;
-    font-size: 1.2em;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 1.5em;
     color: black;
-    padding: 0.5em;
+    padding: 0;
     margin: 1rem;
     width: 90vw;
     height: auto;
 }
+
 .smallText {
     font-family: "Aboreto", cursive;
     font-size: 1.6em;
