weekly changes calendar upda

--- a/src/components/bloodDrive2023.module.css
+++ b/src/components/bloodDrive2023.module.css
@@ -30,6 +30,16 @@
   justify-content: center;
 }
 
+.text {
+  margin-top: 3rem;
+  color: green;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
 @media only screen and (max-width: 9999px) {
   .image {
     width: 50vw;
