--- a/src/components/juneteenth.module.css
+++ b/src/components/juneteenth.module.css
@@ -60,24 +60,25 @@
   }
   
   .button {
-    background: rgb(83, 78, 3);
+    background: rgb(23, 144, 7);
     border-radius: 8px;
     cursor: pointer;
     color: white;
     font-family: Arial;
-    font-size: 1.25rem;
+    font-size: 1.75rem;
     padding: 0.5rem 0.5rem;
     text-decoration: none;
     border: none;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
     transition: all 0.3s ease;
     outline: none;
   }
   
   .button:hover {
-    background-color: #4002ac;
+    background-color: #7fea49;
     font-weight: bolder;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
+    color: black;
   }
 
 
