--- a/src/components/bishopVisit2024.module.css
+++ b/src/components/bishopVisit2024.module.css
@@ -16,6 +16,11 @@
 .imageWrapper {
   width: 100%;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .image {
@@ -25,6 +30,10 @@
 
 .textWrapper {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (min-width: 768px) {
