--- a/src/components/bishopVisit2024.module.css
+++ b/src/components/bishopVisit2024.module.css
@@ -1,6 +1,4 @@
-
-
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 
 
 .container {
@@ -10,7 +8,7 @@
   /* max-width: 1200px; */
   margin: 0 auto;
   padding: 20px 50px;
-  background-color: lightcoral;
+  background-color: rgb(243, 181, 181);
 }
 
 .imageWrapper {
@@ -20,7 +18,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
 .image {
@@ -28,12 +25,69 @@
   height: 90%;
 }
 
-.textWrapper {
+.descWrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
+}
+
+.headingWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+}
+
+.textWrapper {
+  padding-top: 20px;
+  /* width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center; */
+}
+
+
+.heading {
+  margin: 0;
+  padding: 5px;
+  color: black;
+
+  font-family: "Afacad Flux", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-size:2rem; 
+  font-variation-settings:
+    "slnt" 0;
+}
+
+.text {
+  margin: 0;
+  padding: 10px;
+  color: black;
+  line-height: 1.2;
+  font-family: "Afacad Flux", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 1.3rem; 
+  font-variation-settings:
+    "slnt" 0;
+}
+
+.caption {
+  color: black;
+  font-family: "Afacad Flux", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 0.8rem; 
+  font-variation-settings:
+    "slnt" 0;
 }
 
 @media (min-width: 768px) {
@@ -48,10 +102,20 @@
     margin-bottom: 0;
   }
 
-  .textWrapper {
+  .descWrapper {
     flex: 1;
   }
+
+  .heading {
+  font-weight: 600;
+    font-size:3rem; 
+  }
+
+  .text {
+    font-weight: 400;
+  }
 }
+
 
 /* .container {
   background-color: black;
