--- a/src/components/movie202411.module.css
+++ b/src/components/movie202411.module.css
@@ -66,16 +66,11 @@
     font-size: 1.2rem;
   }
 
-  @media only screen and (max-width: 768px) {
-
-   .imageContainer {
-    width: 95%;
-  }
-}
+  
 .youtubeVideoContainer {
   position: relative;
   overflow: hidden;
-  width: 100%;
+  width: 70%;
 }
 
 .youtubeVideoContainer::after {
@@ -90,4 +85,16 @@
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+
+  @media only screen and (max-width: 768px) {
+
+   .imageContainer {
+    width: 95%;
+  }
+
+  .youtubeVideoContainer {
+    width: 80%;
+  }
 }
