--- a/src/components/laundryLove.module.css
+++ b/src/components/laundryLove.module.css
@@ -16,7 +16,7 @@
 .imageContainer {
   background-color: rgb(180, 148, 172);
   margin: 0;
-  padding: 0;
+  padding: 2rem;
   padding-bottom: 2rem;
   display: flex;
   flex-flow: row nowrap;
@@ -28,7 +28,7 @@
 .headerContainer {
   background-color: rgb(180, 148, 172);
   margin: 0;
-  padding: 0;
+  padding: 0rem;
   /* padding-bottom: 2rem; */
   height: auto;
   display: flex;
@@ -51,7 +51,7 @@
 
 .text {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   margin-left: 10vw;
   margin-right: 10vw;
   font-size: 1.0rem;
