--- a/src/components/gift2024.module.css
+++ b/src/components/gift2024.module.css
@@ -86,8 +86,20 @@ h2 {
   justify-content: center;
 }
 
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+a {
+  color: white;
+}
+
 .button {
-  background: rgb(14, 14, 240);
+  /* background: rgb(14, 14, 240);
   border-radius: 12px;
   cursor: pointer;
   color: white;
@@ -95,10 +107,25 @@ h2 {
   font-size: 2.5vh;
   text-decoration: none;
   margin-top: 1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   border: none;
   width: 40vw;
-  height: 10vh;
+  height: 10vh; */
+
+
+  background: rgb(37, 3, 233);
+  border-radius: 8px;
+  cursor: pointer;
+  color: white;
+  font-family: Arial;
+  font-size: 1.75rem;
+  padding: 0.5rem 0.5rem;
+  text-decoration: none;
+  border: none;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+  outline: none;
+  margin: 0.5rem 0.5rem;
 }
 
 .button:hover {
@@ -125,3 +152,5 @@ h2 {
 .periodSelect {
   width: auto;
 }
+
+
