--- a/src/components/gift2024.module.css
+++ b/src/components/gift2024.module.css
@@ -1,3 +1,7 @@
+* {
+  display: block;
+}
+
 .container {
   position: relative;
   display: flex;
@@ -23,15 +27,24 @@
 }
 
 .descWrapper {
-  width: 100%;
-  display: flex;
+  /* width: 100%; */
+  /* display: flex;
   flex-direction: column;
-  align-items: left;
-  justify-content: center;
+  align-items: center;
+  justify-content: center; */
 }
 
+h1 {
+  font-size: 2rem;
+  text-align: center;
+}
 h2 {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
+  text-align: center;
+}
+p .highlight {
+  font-weight: 800;
+
 }
 
 .form {
@@ -62,9 +75,9 @@ h2 {
 }
 
 .text {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: left;
+  justify-content: left; */
   font-size: 1rem;
   color: black;
   margin: 0;
