--- a/src/components/marion20250622.module.css
+++ b/src/components/marion20250622.module.css
@@ -5,10 +5,21 @@
     background-color: rgb(130, 146, 245);
 }
 
+.upperContainer {
+  margin: 0;
+  padding: 10px;
+  background-color: rgb(148, 181, 242);
+  color: black;
+  display: flex column;
+  justify-content: center;
+  line-height: 1.6rem;
+}
+
+
 .container {
   margin: 0;
   padding: 10px;
-  /* background-color: rgb(180, 148, 172); */
+ background-color: rgb(107, 155, 244);
   color: black;
   display: flex column;
   justify-content: center;
@@ -16,16 +27,19 @@
 }
 
 .imageContainer {
-  /* background-color: rgb(180, 148, 172); */
-  margin: 0;
-  padding: 2rem;
-  padding-bottom: 2rem;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
+    margin: 0;
+    padding: 0;
+    /* width: 80%; */
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.image {
+    margin: 1rem 1rem;
+}
+
 
 .headerContainer {
   /* background-color: rgb(180, 148, 172); */
@@ -40,10 +54,6 @@
   align-content: center;
 }
 
-.image {
-  /* margin: 1rem 1rem; */
-  justify-content: center;
-}
 
 .title {
   font-size: 1.75rem;
