--- a/src/components/boa2025.module.css
+++ b/src/components/boa2025.module.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+
+
 .main {
   margin: 0;
   padding: 0;
-  background-color: rgb(108, 100, 91);
+  background-color: rgb(244, 240, 236);
 }
 
 
@@ -21,3 +26,21 @@
   justify-content: center;
 }
 
+.textContainer {
+  margin-left: 10%;
+  margin-right: 10%;
+  /* margin-left: 10vw; */
+  width: 80vw;
+  /* width: 70vw; */
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: 'Raleway', sans-serif;
+}
+
+p {
+  margin: 5px;
+}
