--- a/src/components/pledge2026.module.css
+++ b/src/components/pledge2026.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 .container {
   position: relative;
   display: flex;
@@ -6,6 +8,22 @@
   margin: 0px;
   height: auto;
   background-color: rgb(130, 185, 240);
+}
+
+.headingContainer {
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  margin: 0;
+  height: auto;
+  padding-left: 90px;
+  padding-right: 90px;
+
+  font-family: "Merriweather Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .imageWrapper {
@@ -33,10 +51,16 @@
 h1 {
   font-size: 2rem;
   text-align: center;
+  font-weight: 400;
+  margin: 2% 10%;
+  font-family: "Merriweather Sans", sans-serif;
 }
 h2 {
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
+  font-weight: 300;
+  margin: 1% 10%;
+  font-family: "Merriweather Sans", sans-serif;
 }
 p .highlight {
   font-weight: 800;
