--- a/src/components/pledge2026.module.css
+++ b/src/components/pledge2026.module.css
@@ -17,9 +17,8 @@
   justify-content: center;
   margin: 0;
   height: auto;
-  padding-left: 90px;
-  padding-right: 90px;
-
+  /* padding-left: 60px; */
+  /* padding-right: 60px; */
   font-family: "Merriweather Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 300;
@@ -52,14 +51,16 @@ h1 {
   font-size: 2rem;
   text-align: center;
   font-weight: 400;
-  margin: 2% 10%;
+  margin: 0;
+  margin: 10px 10px;
   font-family: "Merriweather Sans", sans-serif;
 }
 h2 {
   font-size: 1rem;
   text-align: center;
   font-weight: 300;
-  margin: 1% 10%;
+  margin: 0;
+  margin: 5px 20px;
   font-family: "Merriweather Sans", sans-serif;
 }
 p .highlight {
