--- a/src/components/events.module.css
+++ b/src/components/events.module.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
 
 .component {
   padding-top: 15px;
@@ -9,7 +9,7 @@
 }
 
 .container {
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -19,36 +19,47 @@
 .event {
   margin: 8px;
   width: 90vw;
-  display:flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: left;
-  background-image: linear-gradient(to right,  rgb(132, 178, 238), rgb(133, 75, 241),  rgb(132, 178, 238));
+  background-image: linear-gradient(
+    to right,
+    rgb(132, 178, 238),
+    rgb(133, 75, 241),
+    rgb(132, 178, 238)
+  );
   font-size: 1.5rem;
   font-weight: 600;
-  font-family: 'Raleway', sans-serif;
-  color: white
+  font-family: "Raleway", sans-serif;
+  color: white;
 }
 
 .mental_health {
-  background-image: 
-  linear-gradient(to top,  rgb(132, 178, 238), rgb(46, 160, 40),  rgb(132, 178, 238) );
+  background-image: linear-gradient(
+    to top,
+    rgb(132, 178, 238),
+    rgb(46, 160, 40),
+    rgb(132, 178, 238)
+  );
 }
 
 .gun_awareness {
-  background-image: 
-  linear-gradient(to top,  rgb(132, 178, 238), #fc5000,  rgb(132, 178, 238) );
+  background-image: linear-gradient(
+    to top,
+    rgb(132, 178, 238),
+    #fc5000,
+    rgb(132, 178, 238)
+  );
 }
 
 .juneteenth {
-  background-image: 
-  linear-gradient(to top,  red, black, green );
+  background-image: linear-gradient(to top, red, black, green);
   color: white;
 }
 
 .july4 {
-  background-image: 
-  linear-gradient(to top,  red, white, blue );
+  background-image: linear-gradient(to top, red, white, blue);
 }
 
 .eventDetail {
@@ -78,20 +89,20 @@
 .title {
   font-size: 2.5rem;
   font-weight: 500;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
-  padding: 0; 
+  padding: 10px;
 }
 
 @media only screen and (max-width: 768px) {
   .event {
-       width: 95vw;
-       flex-direction: column;
-       justify-content: center;
-       font-size: 1.0rem;
-  font-weight: 500;
-  font-family: 'Raleway', sans-serif;
-  color: white;
+    width: 95vw;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 500;
+    font-family: "Raleway", sans-serif;
+    color: white;
   }
 
   .eventDate {
@@ -107,22 +118,21 @@
     width: 60vw;
     font-size: 1.25rem;
   }
-  
+
   .eventTime {
     margin: 0;
     padding: 0px;
     width: 60vw;
     font-size: 1.25rem;
   }
-  
+
   .eventDesc {
     margin: 0;
     padding: 0px;
     width: 60vw;
-    font-size: 1.25rem;    
+    font-size: 1.25rem;
   }
 }
-
 
 .button {
   background: rgb(133, 75, 241);
