--- a/src/components/pledge2026.module.css
+++ b/src/components/pledge2026.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   margin: 0px;
   height: auto;
-  background-color: rgb(130, 185, 240);
+  background-color: rgb(54, 58, 63);
 }
 
 .headingContainer {
@@ -23,6 +23,21 @@
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
+}
+
+.imageContainer {
+  margin: 0;
+  padding: 0;
+  padding: 2vh 0;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.image {
+  justify-content: center;
 }
 
 .imageWrapper {
@@ -56,7 +71,7 @@ h1 {
   font-family: "Merriweather Sans", sans-serif;
 }
 h2 {
-  font-size: 1rem;
+  font-size: 3rem;
   text-align: center;
   font-weight: 300;
   margin: 0;
@@ -73,7 +88,7 @@ p .highlight {
   flex-flow: column nowrap;
   justify-content: center;
   padding: 10px;
-  margin: 2% 10%;
+  margin: 2% 20%;
   height: auto;
   align-items: center;
   background-color: rgb(26, 128, 230);
