--- a/src/components/pledge2026.module.css
+++ b/src/components/pledge2026.module.css
@@ -1,13 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 .container {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   margin: 0px;
   height: auto;
   background-color: rgb(54, 58, 63);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: white;
 }
 
 .headingContainer {
@@ -36,6 +41,28 @@
   align-content: center;
 }
 
+.textContainer {
+  /* position: relative; */
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+  /* height: auto; */
+  background-color: rgb(54, 58, 63);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: white !important;
+}
+
+.text {
+  font-size: 1rem;
+  color: white;
+  text-decoration: none;
+  height: 2px;
+}
 .image {
   justify-content: center;
 }
@@ -78,9 +105,6 @@ h2 {
   margin: 5px 20px;
   font-family: "Merriweather Sans", sans-serif;
 }
-p .highlight {
-  font-weight: 800;
-}
 
 .form {
   position: relative;
@@ -107,18 +131,6 @@ p .highlight {
   /* margin-bottom: 40px; */
   background-color: rgb(228, 232, 236);
   width: 50vw;
-}
-
-.text {
-  /* display: flex;
-  align-items: center;
-  justify-content: left; */
-  font-size: 1rem;
-  color: black;
-  margin: 0;
-  padding: 0.5rem;
-  margin-left: 12%;
-  margin-right: 12%;
 }
 
 .formText {
