--- a/src/components/pledge2026.module.css
+++ b/src/components/pledge2026.module.css
@@ -211,3 +211,15 @@ a {
 .periodSelect {
   width: auto;
 }
+
+.replyText {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 1rem;
+  color: black;
+  margin: 0;
+  padding: 0.5rem;
+  margin-left: 12%;
+  margin-right: 12%;
+}
