--- a/src/components/annualMeeting2026.module.css
+++ b/src/components/annualMeeting2026.module.css
@@ -1,17 +1,21 @@
-.imageContainer {
-  background-color: rgba(241, 214, 40, 0.992);
+.main {
   margin: 0;
   padding: 0;
-  padding-bottom: 2rem;
+  background-color: rgb(81, 18, 72);
+}
+
+.imageContainer {
+  margin: 0;
+  padding: 0;
+  padding: 2vh 0;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
   align-content: center;
 }
 
 .image {
-  /* margin: 1rem 1rem; */
   justify-content: center;
 }
 
